# stfsc

./: AndroidManifest.xml  Cargo.toml  README.md  apk_contents.txt  build.rs  build_all.sh  build_editor.sh  build_editor_windows.ps1  build_engine.sh  build_err.txt  build_err_2.txt  build_linux.sh  build_log.txt  build_log_editor.txt  build_log_editor_final.txt  build_log_editor_fix.txt  build_log_main.txt  build_log_stfsc.txt  build_log_stfsc_latest.txt  build_log_stfsc_v2.txt  build_out.txt  build_output.txt  build_output_lib.txt  build_quest.sh  build_windows.ps1  check_android3.txt  check_braces.py  check_naga.txt  check_output.txt  check_output_2.txt  check_output_3.txt  check_output_4.txt  check_output_5.txt  check_output_6.txt  check_output_7.txt  check_output_8.txt  check_output_appsw.txt  check_output_appsw_retry.txt  check_output_appsw_retry2.txt  check_output_editor_1.txt  (+44 more)
.github/workflows/: rust.yml
audio/: mod.rs
graphics/: frag.frag  mod.rs  skybox.vert  vert.vert
openxr_loader_temp/: AndroidManifest.xml
openxr_loader_temp/prefab/: prefab.json
openxr_loader_temp/prefab/modules/openxr_loader/libs/android.arm64-v8a/: abi.json
openxr_loader_temp/prefab/modules/openxr_loader/libs/android.armeabi-v7a/: abi.json
openxr_loader_temp/prefab/modules/openxr_loader/libs/android.x86/: abi.json
openxr_loader_temp/prefab/modules/openxr_loader/libs/android.x86_64/: abi.json
physics/: mod.rs
scenes/: test.json  test1.json
script_cache/: generated_script_bindings.rs
src/: bundle.rs  lib.rs  main.rs  main.rs.bak  project.rs  resource_loader.rs  runtime.rs
src/audio/: mod.rs
src/graphics/: cas.frag  cas_frag.spv  frag.frag  frag_frag.spv  mod.rs  occlusion.rs  post.vert  shadow.vert  shadow_vert.spv  skinned.vert  skinned_vert.spv  skybox.frag  skybox_frag.spv  skybox_vert.spv  texture_streaming.rs  ui.frag  ui.vert  ui_frag.spv  ui_vert.spv  vert.vert  vert_vert.spv  viewport_renderer.rs
src/lighting/: mod.rs
src/physics/: mod.rs
src/project/: export.rs  mod.rs  scene.rs  script_cache.rs  script_compiler.rs
src/runtime/: tasks.rs
src/ui/: font.rs  mod.rs  renderer.rs
src/world/: animation.rs  fbx_loader.rs  gltf_loader.rs  mod.rs  sandbox.rs  scripting.rs
src/xr/: mod.rs
world/: mod.rs  scripting.rs
