[package]
name = "stfsc_engine"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core Runtime
tokio = { version = "1.32", features = ["full"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"

# Graphics (Vulkan via Ash)
ash = { version = "0.37", features = ["linked"] }
ash-window = "0.12"
raw-window-handle = "0.6"

# VR/XR Interface
openxr = { version = "0.18", features = ["linked"] }

# Math & Physics
glam = { version = "0.24", features = ["bytemuck", "serde"] }
rapier3d = { version = "0.18", features = ["simd-stable", "parallel"] }

# Asset Management & Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
bytemuck = "1.14"
image = "0.24"

# ECS
# ECS
hecs = "0.10"
rand = "0.8"
eframe = "0.24"
home = "=0.5.9"
tobj = "3.2"



[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13"
ndk = "0.7"
ndk-context = "0.1"
jni = "0.21"
android-activity = { version = "0.4", features = ["native-activity"] }


[package.metadata.android]
package = "com.stfsc.engine"
label = "STFSC Engine"
target_sdk_version = 33
min_sdk_version = 26
build_targets = ["aarch64-linux-android"]
# Android Configuration
manifest = "AndroidManifest.xml"
assets = "assets"


[package.metadata.android.signing.release]
path = "stfsc.keystore"
keystore_password = "android"
key_alias = "stfsc_alias"
key_password = "android"

[profile.release]
lto = "thin"
opt-level = 3
codegen-units = 1
[build-dependencies]
shaderc = "0.9"

