[package]
name = "stfsc_engine"
version = "0.1.0"
edition = "2021"
publish = false
default-run = "stfsc_engine"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core Runtime
tokio = { version = "1.32", features = ["full"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"

# Graphics (Vulkan via Ash)
ash = { version = "0.37" }
ash-window = "0.12"
raw-window-handle = "0.5"


# Math & Physics
glam = { version = "0.24", features = ["bytemuck", "serde"] }
rapier3d = { version = "0.18", features = ["simd-stable", "parallel"] }

# Asset Management & Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
serde_json = "1.0"  # Scene file serialization
bytemuck = "1.14"
image = "0.24"
ktx2 = "0.3.0"

# ECS
# ECS
hecs = "0.10"
rand = "0.8"
rayon = "1.8"  # Parallel iteration for game logic
eframe = "0.24"
home = "=0.5.9"
tobj = "3.2"
# Model loading via tobj (OBJ format) - FBX files should be converted to OBJ
winit = { version = "0.29", features = ["rwh_05"] }
rodio = "0.17"  # Audio playback (requires alsa-lib-devel on Fedora)
fontdue = "0.8"  # Lightweight font rasterization for UI text


[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13"
ndk = "0.7"
ndk-context = "0.1"
jni = "0.21"
android-activity = { version = "0.4", features = ["native-activity"] }
openxr = { version = "0.18", features = ["linked"] }


[package.metadata.android]
package = "com.stfsc.engine"
build_targets = ["aarch64-linux-android"]
assets = "assets"
min_sdk_version = 29
target_sdk_version = 32

[[package.metadata.android.uses_permission]]
name = "android.permission.INTERNET"

[[package.metadata.android.uses_permission]]
name = "com.oculus.permission.FACE_TRACKING"

[[package.metadata.android.uses_permission]]
name = "horizonos.permission.FACE_TRACKING"

[package.metadata.android.application]
label = "STFSC Engine"
theme = "@android:style/Theme.Black.NoTitleBar.Fullscreen"
#debuggable = false
#has_code = false
meta_data = [
    { name = "com.oculus.supportedDevices", value = "quest2|questpro|quest3|quest3s" }
]

[package.metadata.android.application.activity]
name = "android.app.NativeActivity"
launch_mode = "singleTask"
screen_orientation = "landscape"
config_changes = "orientation|screenSize|screenLayout|keyboard|keyboardHidden|navigation|density|uiMode"
exported = true
resizeable_activity = false
meta_data = [
    { name = "com.samsung.android.vr.application.mode", value = "vr_only" },
    { name = "com.oculus.vr.mode", value = "vr_only" },
    { name = "android.app.lib_name", value = "stfsc_engine" },
    { name = "com.oculus.vr.focusaware", value = "true" }
]
intent_filters = [
    { action = "android.intent.action.MAIN", category = ["android.intent.category.LAUNCHER", "org.khronos.openxr.intent.category.IMMERSIVE_HMD"] }
]

[[package.metadata.android.uses_feature]]
name = "android.hardware.vr.headtracking"
required = true
version = 1

[[package.metadata.android.uses_feature]]
name = "android.hardware.vr.high_performance"
required = true

[[package.metadata.android.uses_feature]]
name = "android.software.vr.mode"
required = true

[[package.metadata.android.uses_feature]]
name = "com.oculus.feature.HAND_TRACKING"
required = true

[[package.metadata.android.uses_feature]]
name = "com.oculus.software.hand_tracking"
required = true

[[package.metadata.android.uses_feature]]
name = "com.oculus.feature.PASSTHROUGH"
required = true


[package.metadata.android.signing.release]
path = "stfsc.keystore"
keystore_password = "android"
key_alias = "stfsc_alias"
key_password = "android"

[profile.release]
lto = "thin"
opt-level = 3
codegen-units = 1
[build-dependencies]
shaderc = "0.9"

